2 commit. Added css folder and logo
Made some changes to initial index.html

- added css folder and empty styles.css file
- added fullsize logo files

--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<title>Wifi</title>
+	<meta charset="UTF-8" content="text/html">
+	<title>LNPU WiFi Website</title>
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
 	
