--- a/index.html
+++ b/index.html
@@ -3,9 +3,36 @@
 <head>
 	<meta charset="UTF-8" content="text/html">
 	<title>LNPU WiFi Website</title>
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="css/styles.css">
+
+	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
 </head>
 <body>
-	
+	<div id="header" class="container-fluid">
+		<div class="row">
+			<div class="col-md-5 col-sm-12">
+				<img src="Website_WiFi_Logo_2_fullsize.jpg">
+			</div>
+			<div class="col-md-7">
+				<nav>
+					<ul>
+						<li class="btn btn-lg">One</li>
+						<li class="btn btn-lg">Two</li>
+						<li class="btn btn-lg">Three</li>
+						<li class="btn btn-lg">Four</li>
+						<li class="btn btn-lg">Five</li>
+					</ul>
+				</nav>
+			</div>
+		</div>
+	</div>
+
+	<div id="content-wrapper" class="container">
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum eos quasi eligendi praesentium dignissimos deserunt necessitatibus blanditiis et quaerat natus adipisci dolor, vero explicabo nihil voluptatum repudiandae expedita mollitia deleniti!</p>
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum eos quasi eligendi praesentium dignissimos deserunt necessitatibus blanditiis et quaerat natus adipisci dolor, vero explicabo nihil voluptatum repudiandae expedita mollitia deleniti!</p>
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum eos quasi eligendi praesentium dignissimos deserunt necessitatibus blanditiis et quaerat natus adipisci dolor, vero explicabo nihil voluptatum repudiandae expedita mollitia deleniti!</p>
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum eos quasi eligendi praesentium dignissimos deserunt necessitatibus blanditiis et quaerat natus adipisci dolor, vero explicabo nihil voluptatum repudiandae expedita mollitia deleniti!</p>
+	</div>
 </body>
 </html>
