Last commit of the 1st day
Added placeholder for the footer
Added css for the footer
Reorganized source images into new folder

--- a/index.html
+++ b/index.html
@@ -2,17 +2,16 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8" content="text/html">
-	<title>LNPU WiFi Website</title>
+	<title>LPNU WiFi Website</title>
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
-
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
 </head>
 <body>
 	<div id="header" class="container-fluid">
 		<div class="row">
-			<div class="col-md-5 col-sm-12">
-				<img src="Website_WiFi_Logo_2_fullsize.jpg">
+			<div class="col-md-5">
+				<img src="logos_sources/Website_WiFi_Logo_2_fullsize.jpg">
 			</div>
 			<div class="col-md-7">
 				<nav>
@@ -33,6 +32,40 @@
 		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum eos quasi eligendi praesentium dignissimos deserunt necessitatibus blanditiis et quaerat natus adipisci dolor, vero explicabo nihil voluptatum repudiandae expedita mollitia deleniti!</p>
 		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum eos quasi eligendi praesentium dignissimos deserunt necessitatibus blanditiis et quaerat natus adipisci dolor, vero explicabo nihil voluptatum repudiandae expedita mollitia deleniti!</p>
 		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum eos quasi eligendi praesentium dignissimos deserunt necessitatibus blanditiis et quaerat natus adipisci dolor, vero explicabo nihil voluptatum repudiandae expedita mollitia deleniti!</p>
+	</div>
+
+	<div id="footer" class="footer container-fluid">
+		<div id="footer-content" class="row">
+			<div class="col-md-4">
+				<ul>
+					<li><h3><strong>Column tiltle 1</strong></h3></li>
+					<li><a href="#">Link 1</a></li>
+					<li><a href="#">Link 2</a></li>
+					<li><a href="#">Link 3</a></li>
+				</ul>
+			</div>
+			<div class="col-md-4">
+				<ul>
+					<li><h3><strong>Column tiltle 2</strong></h3></li>
+					<li><a href="#">Link 1</a></li>
+					<li><a href="#">Link 2</a></li>
+					<li><a href="#">Link 3</a></li>
+				</ul>
+			</div>
+			<div class="col-md-4">
+				<ul>
+					<li><h3><strong>Column tiltle 3</strong></h3></li>
+					<li><a href="#">Link 1</a></li>
+					<li><a href="#">Link 2</a></li>
+					<li><a href="#">Link 3</a></li>
+				</ul>
+			</div>
+		</div>
+		<div id="footer-bottom" class="row">
+			<div class="col-md-12">
+				<span>&copy; <a href="http://lp.edu.ua/">Національний університет «Львівська політехніка»</a>, 2005-2017.</span>
+			</div>
+		</div>
 	</div>
 </body>
 </html>
