--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 </head>
 <body>
-	<div id="header" class="container-fluid">
+	<div id="header" class="header container-fluid">
 		<div class="row">
 			<div class="col-md-5">
 				<img src="logos_sources/Website_WiFi_Logo_2_fullsize.jpg">
