--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 <body>
 	<div id="header" class="header container-fluid">
 		<div class="row">
-			<div class="col-md-4">
+			<div class="col-md-3">
 				<img src="logos_sources/Website_WiFi_Logo_2_fullsize.jpg" class="img-fluid">
 			</div>
-			<div class="col-md-4">
+			<div class="col-md-5">
 				<nav>
 					<ul class="menu nav navbar-nav">
 						<li class="btn btn-lg">One</li>
@@ -48,9 +48,57 @@
 	</div>
 
 	<div id="content-wrapper" class="container">
-		<div id="slider-top" class="slider-top">
-			
+		<div class="row">
+			<div class="col-md-12">
+				<div id="slider-top" class="carousel slide" data-ride="carousel">
+					<ol class="carousel-indicators">
+						<li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+      					<li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+      					<li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+					</ol>
+					<div class="carousel-inner" role="listbox">
+						<div class="carousel-item active">
+							<img class="d-block w-100" data-src="logos_sources/Website_WiFi_Logo_1_fullsize.jpg" alt="First slide">
+							<div class="carousel-caption d-none d-md-block">
+          						<h3>First slide label</h3>
+         						 <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+        					</div>
+						</div>
+						<div class="carousel-item">
+							<img class="d-block w-100" data-src="logos_sources/Website_WiFi_Logo_2_fullsize.jpg" alt="Second slide">
+							<!-- <div class="carousel-caption d-none d-md-block">
+          						<h3>Second slide label</h3>
+         						 <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+        					</div> -->
+						</div>
+						<div class="carousel-item">
+							<img class="d-block w-100" data-src="logos_sources/Website_WiFi_Logo_2_fullsize.jpg" alt="Third slide">
+							<!-- <div class="carousel-caption d-none d-md-block">
+          						<h3>Second slide label</h3>
+         						 <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+        					</div> -->
+						</div>
+					</div>
+					<a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+      					<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      					<span class="sr-only">Previous</span>
+   					</a>
+    				<a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+      					<span class="carousel-control-next-icon" aria-hidden="true"></span>
+      					<span class="sr-only">Next</span>
+    				</a>
+				</div>	
+			</div>
 		</div>
+		<div class="row">
+			<div class="col-md-4">
+
+			</div>
+			<div class="col-md-8">
+				
+			</div>
+		</div>
+
 		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum eos quasi eligendi praesentium dignissimos deserunt necessitatibus blanditiis et quaerat natus adipisci dolor, vero explicabo nihil voluptatum repudiandae expedita mollitia deleniti!</p>
 		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum eos quasi eligendi praesentium dignissimos deserunt necessitatibus blanditiis et quaerat natus adipisci dolor, vero explicabo nihil voluptatum repudiandae expedita mollitia deleniti!</p>
 		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum eos quasi eligendi praesentium dignissimos deserunt necessitatibus blanditiis et quaerat natus adipisci dolor, vero explicabo nihil voluptatum repudiandae expedita mollitia deleniti!</p>
