--- a/index.html
+++ b/index.html
@@ -44,20 +44,19 @@
               <i class="glyphicon glyphicon-search"></i>
             </button>
           </span>
-          
         </div>
       </div>
     </div>
   </div>
 
   <div id="content-wrapper" class="container">
-    <div class="row">
+  	<div id="slider-row" class="row">
       <div class="col-md-12">
         <div id="slider-top" class="carousel slide" data-ride="carousel">
           <ol class="carousel-indicators">
-            <li data-target="#slider-top" data-slide-to="0" class="active"></li>
-                <li data-target="#slider-top" data-slide-to="1"></li>
-                <li data-target="#slider-top" data-slide-to="2"></li>
+          	<li data-target="#slider-top" data-slide-to="0" class="active"></li>
+            <li data-target="#slider-top" data-slide-to="1"></li>
+            <li data-target="#slider-top" data-slide-to="2"></li>
           </ol>
           <div class="carousel-inner">
             <div class="item active">
@@ -70,7 +69,7 @@
               <img src="logos_sources/Website_WiFi_Logo_2_fullsize.jpg" alt="Third slide">
             </div>
           </div>
-          <a class="left carousel-control" href="#slider-top" role="button" data-slide="prev">
+          	<a class="left carousel-control" href="#slider-top" role="button" data-slide="prev">
                 <span class="glyphicon glyphicon-chevron-left"></span>
             </a>
             <a class="right carousel-control" href="#slider-top" role="button" data-slide="next">
@@ -79,9 +78,12 @@
         </div>  
       </div>
     </div>
-    <div class="row">
+    <div id="content-row" class="row">
       <div class="col-md-4">
-
+      	<ul class="nav menu navbar-nav">
+      		<li class="item">Menuentry 1</li>
+      		<li class="item">Menuentry 2</li>
+      	</ul>
       </div>
       <div class="col-md-8">
         
